# cooplan-organization

./: .gitignore  Cargo.toml  README.MD  api.json  config.json
.github/workflows/: build.yml  ci.yml  integration.yml  release.yml
integration_tests/: mongodb_config.py
integration_tests/organization/: amqp_config.py  create.py  join.py  read.py
integration_tests/user/: amqp_config.py  read.py
src/: error.rs  main.rs
src/api/input/: mod.rs  registration.rs
src/api/input/elements/: example.rs  mod.rs  organization.rs  user.rs
src/api/output/: registration.rs
src/config/: config.rs
src/logic/: init.rs  logic_request.rs  logic_request_dispatch.rs  mod.rs  organization_permission.rs  permission.rs  storage_request.rs
src/logic/actions/: example_logic_action.rs  example_storage_action.rs  invitation_code_storage_action.rs  mod.rs  organization_logic_action.rs  organization_root_logic_action.rs  organization_root_storage_action.rs  organization_storage_action.rs  user_logic_action.rs  user_storage_action.rs
src/logic/elements/: example.rs  invitation.rs  mod.rs  organization.rs  organization_root.rs  user.rs  user_organization.rs
src/logic/executors/: mod.rs  organization.rs  organization_root.rs  user.rs
src/logic/validation/: country.rs  invitation.rs  mod.rs  name.rs  organization.rs  telephone.rs  user.rs
src/storage/: init.rs  mod.rs  mongodb_request_dispatch.rs
src/storage/elements/: invitation.rs  mod.rs  organization.rs  user.rs
src/storage/executors/: invitation.rs  mod.rs  mongodb_example.rs  organization.rs  organization_root.rs  user.rs
(+1 files in other folders)
