[package]
name = "cooplan-organization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Proprietary dependencies
cooplan-amqp-api = "0.12.0"
cooplan-amqp-api-shared = "0.1.2"
cooplan-lapin-wrapper = "0.5.0"
cooplan-state-tracker = "0.2.0"
cooplan-mongodb = "0.2.0"
cooplan-util = "0.1.1"

# JSON Serialization
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"

# Logging
log = "0.4.17"
simple_logger = "4.0.0"

# Asynchronous runtime & utilities
tokio = { version = "1", features = ["full"] }

tokio-executor-trait = "2.1"
tokio-reactor-trait = "1.1"
futures = "0.3.25"
async-channel = "1.8.0"

# Token
jsonwebtoken = "8.2.0"

# AMQP
lapin = "2.1.1"

#MongoDB
mongodb = "2.3.1"

# Phone number validation
phonenumber = "0.3.1+8.12.9"

# Country codes
celes = "2.4.0"